--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         if (dob === correctDob) {
             document.getElementById('dobPrompt').style.display = 'none';
             document.getElementById('greeting').style.display = 'block';
-            document.getElementById('valentineQuestion').innerText = `Hi, ${userName}. Will you be my valentine?`;
+            document.getElementById('valentineQuestion').innerText = `Hi, ${userName}. Will you be my Valentine?`;
         } else {
             document.getElementById('dobPrompt').style.display = 'none';
             document.getElementById('response').style.display = 'block';
